--- a/template/include/annotation-blockquote-not.tmpl
+++ b/template/include/annotation-blockquote-not.tmpl
@@ -7,7 +7,7 @@
 		   <[IF linkTarget]>target="<{linkTarget}>"<[IFEND]>
 		   <[IF titleLinkDataAttributes]><{titleLinkDataAttributes}><[IFEND]>
 		   <{titleLinkIconMetadata}>
-			   ><{titleHTML}></a>\
+			   ><{fullTitleHTML}></a>\
 		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>
 	</p>
 	<[IF authorDateAux]>
