--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2115,7 +2115,7 @@ video {
 	cursor: pointer;
 }
 
-iframe, object {
+iframe {
 	display: block;
 	width: calc(100% - 2px);
 	max-height: calc(100vh - 8rem);
@@ -2137,8 +2137,7 @@ iframe.youtube {
 iframe.vimeo {
 	aspect-ratio: 495 / 278;
 }
-
-object {
+iframe.pdf {
 	aspect-ratio: 8.5 / 11;
 }
 
@@ -4540,8 +4539,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     vertical-align: text-top;
 }
 
-.popframe-body:not(.object) iframe,
-.popframe-body:not(.object) object {
+.popframe-body:not(.object) iframe {
 	max-height: calc(var(--popframe-scroll-view-height) - 6 * var(--base-font-size));
 }
 
@@ -4674,27 +4672,23 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .popframe-body.object img,
 .popframe-body.object video,
 .popframe-body.object audio,
-.popframe-body.object iframe,
-.popframe-body.object object {
+.popframe-body.object iframe {
     display: block;
     margin: auto;
 }
 
-.popframe-body.object iframe,
-.popframe-body.object object {
+.popframe-body.object iframe {
     border: unset;
     max-height: unset;
 }
 
-.popframe-body.object iframe,
-.popframe-body.object object {
+.popframe-body.object iframe {
     background-color: var(--GW-popframes-iframe-background-color);
 }
 
 /*  Don’t show when loading failed.
  */
-.popframe-body.object.loading-failed iframe,
-.popframe-body.object.loading-failed object {
+.popframe-body.object.loading-failed iframe {
     visibility: hidden;
 }
 
@@ -5211,9 +5205,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 }
 
 .popup-body.object.zoomed iframe,
-.popup-body.object.zoomed object,
-.popup-body.object.resized iframe,
-.popup-body.object.resized object {
+.popup-body.object.resized iframe {
     width: 100%;
     height: 100%;
 }
@@ -5374,8 +5366,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     height: var(--GW-popups-popup-max-height);
 }
 
-.popup-body.object iframe,
-.popup-body.object object {
+.popup-body.object iframe {
     width: calc(var(--GW-popups-popup-max-width) - 2 * var(--GW-popups-popup-border-width));
     height: calc(var(--GW-popups-popup-max-height) - 2 * var(--GW-popups-popup-border-width) - var(--popup-title-bar-height));
 }
@@ -5982,8 +5973,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 /*│ Object popins. │*/
 /*└────────────────┘*/
 
-.popin-body.object iframe,
-.popin-body.object object {
+.popin-body.object iframe {
     width: 100%;
     height: calc(var(--GW-popins-popin-max-height) - 2 * var(--GW-popins-popin-border-width) - var(--popin-title-bar-height));
 }
