--- a/css/default.css
+++ b/css/default.css
@@ -818,6 +818,19 @@ blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::
     padding: 0.5em 0 0.5em 2px;
 }
 
+/*******************************************************************/
+/*	File includes in link bibliographies, directory indexes, and other
+    transcluded (rather than pop-framed) annotations.
+ */
+
+.annotation .file-includes {
+    --collapse-toggle-top-height: calc(2.25 * var(--base-font-size));
+    --collapse-toggle-bottom-height: calc(2.25 * var(--base-font-size));
+}
+.annotation .collapse.no-abstract.file-includes > .collapse-content-wrapper {
+    padding: 0.5em 0 0.5em 2px;
+}
+
 /****************************************************/
 /*  Collapses in directory index link bibliographies.
  */
@@ -3513,6 +3526,16 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     border-right: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 .popframe-body > .annotation > .annotation-abstract > .collapse.aux-links-append:last-child {
+    border-bottom: 1px solid var(--GW-aux-links-collapse-border-color);
+}
+
+/*	File-include collapses in annotations.
+ */
+.popframe-body > .annotation > .file-includes.collapse,
+.popframe-body > .annotation > .file-includes .collapse {
+    margin-left: calc(-1 * var(--collapse-left-offset));
+    padding-left: var(--collapse-left-offset);
+    border-right: 1px solid var(--GW-aux-links-collapse-border-color);
     border-bottom: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
