--- a/css/default.css
+++ b/css/default.css
@@ -818,16 +818,15 @@ blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::
     padding: 0.5em 0 0.5em 2px;
 }
 
-/*******************************************************************/
-/*	File includes in link bibliographies, directory indexes, and other
-    transcluded (rather than pop-framed) annotations.
+/****************************************************************/
+/*	File includes in link bibliographies, directory indexes, etc.
  */
 
-.annotation .file-includes {
+.collapse.no-abstract.file-include-collapse {
     --collapse-toggle-top-height: calc(2.25 * var(--base-font-size));
     --collapse-toggle-bottom-height: calc(2.25 * var(--base-font-size));
 }
-.annotation .collapse.no-abstract.file-includes > .collapse-content-wrapper {
+.collapse.no-abstract.file-include-collapse > .collapse-content-wrapper {
     padding: 0.5em 0 0.5em 2px;
 }
 
@@ -3531,8 +3530,8 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 /*	File-include collapses in annotations.
  */
-.popframe-body > .annotation > .file-includes.collapse,
-.popframe-body > .annotation > .file-includes .collapse {
+.popframe-body > .annotation > .file-include-collapse,
+.popframe-body > .annotation > .file-includes > .file-include-collapse {
     margin-left: calc(-1 * var(--collapse-left-offset));
     padding-left: var(--collapse-left-offset);
     border-right: 1px solid var(--GW-aux-links-collapse-border-color);
