Figures in pop-frames should not have additional side margins

--- a/css/default.css
+++ b/css/default.css
@@ -3464,6 +3464,10 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     margin-left: 0;
 }
 
+.popframe-body figure {
+	max-width: calc(100% - 2px);
+}
+
 .popframe-body > figure:only-child {
     margin: 0;
     max-width: unset;
