--- a/css/default.css
+++ b/css/default.css
@@ -5648,7 +5648,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     transition:
         background-color 0.15s ease-out;
 }
-#image-focus-overlay .caption .image-url::before {
+#image-focus-overlay .caption .caption-text-wrapper:not(:empty) + .image-url::before {
 	content: "";
 	position: absolute;
 	top: -1px;
