all: migrate Markdown format file extension '.page' → '.md': shorter & more compatible

--- a/template/default.html
+++ b/template/default.html
@@ -57,7 +57,7 @@
     <meta name="citation_fulltext_html_url" content="https://gwern.net$url$">
     <meta name="og:url" content="https://gwern.net$url$">
     <meta name="page-body-classes" content="$safeURL$ $cssExtension$">
-    <meta name="page-source" content="https://gwern.net$url$.page">
+    <meta name="page-source" content="https://gwern.net$url$.md">
     <meta name="citation_fulltext_world_readable" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
@@ -122,7 +122,7 @@
             $if(tagsHTML)$ $tagsHTML$ $endif$
             <div class="page-metadata-fields">
               $if(author)$ <span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
-              <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.page" class="icon-not" href="$url$.page"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
+              <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.md" class="icon-not" href="$url$.md"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
               <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
               <span class="page-confidence"><a href="/about#confidence-tags" class="icon-not" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
               <span class="page-importance"><a href="/about#importance-tags" class="icon-not" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
