--- a/css/default.css
+++ b/css/default.css
@@ -3543,28 +3543,24 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Collapses in annotations.
  */
 .popframe-body > .annotation > .annotation-abstract > .collapse-block,
-.popframe-body > .annotation > .file-includes > .collapse-block {
+.popframe-body > .annotation > .file-includes > .collapse-block,
+.popframe-body > .annotation > .annotation-abstract > .file-includes > .collapse-block {
     margin-left: calc(-1 * var(--collapse-left-offset));
     padding-left: var(--collapse-left-offset);
 }
 
-/*  Aux-links collapses in annotations.
+/*  Aux-links and file include collapses in annotations.
  */
-.popframe-body > .annotation > .annotation-abstract > .collapse-block.aux-links-append {
+.popframe-body > .annotation > .annotation-abstract > .collapse-block.aux-links-append,
+.popframe-body > .annotation > .file-includes > .collapse-block.file-include-collapse,
+.popframe-body > .annotation > .annotation-abstract > .file-includes > .collapse-block.file-include-collapse {
     padding-right: 0.5em;
     border-right: 1px solid var(--GW-aux-links-collapse-border-color);
 }
-.popframe-body > .annotation > .annotation-abstract:last-child > .collapse-block.aux-links-append:last-child {
-    border-bottom: 1px solid var(--GW-aux-links-collapse-border-color);
-}
-
-/*	File-include collapses in annotations.
- */
-.popframe-body > .annotation > .file-includes > .collapse-block.file-include-collapse {
-    padding-right: 0.5em;
-    border-right: 1px solid var(--GW-aux-links-collapse-border-color);
-}
-.popframe-body > .annotation > .file-includes:last-child > .collapse-block.file-include-collapse:last-child {
+.popframe-body > .annotation > .annotation-abstract:last-child > .collapse-block.aux-links-append:last-child,
+.popframe-body > .annotation > .file-includes:last-child > .collapse-block.file-include-collapse:last-child,
+.popframe-body > .annotation > .annotation-abstract:last-child > .file-includes:last-child > .collapse-block.file-include-collapse:last-child,
+.popframe-body > .annotation .collapse-block.last-collapse {
     border-bottom: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
