--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2795,6 +2795,26 @@ code span.al { color: var(--GW-syntax-highlight-color-alert); text-decoration: u
 code span.er { color: var(--GW-syntax-highlight-color-error); } /* Error */
 code span.im { color: var(--GW-syntax-highlight-color-import); font-weight: bold; font-style: italic } /* Import */
 
+/********************************************************/
+/*	EXPERIMENTAL: Highlight-on-hover for all code blocks.
+ */
+pre code {
+    padding: 0.4rem 0;
+}
+pre .line {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+    padding: 0 0.7rem;
+    box-sizing: border-box;
+}
+pre .line:hover {
+    background-color: var(--GW-code-popframe-line-highlight-background-color);
+    box-shadow:
+        0  1px 0 0 var(--GW-code-popframe-line-highlight-border-color),
+        0 -1px 0 0 var(--GW-code-popframe-line-highlight-border-color);
+}
+
 
 /********/
 /* MATH */
